Interpolation with scaleArray
